<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ConverterFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_separator" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorText"
        app:layout_constraintBottom_toBottomOf="@id/view_separator"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view_top"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ib_switch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_label_sell"

        />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toRightOf="@id/ib_switch"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_top"
        app:layout_constraintBottom_toBottomOf="@id/view_top"
        />


    <ImageView
        android:id="@+id/ib_switch"
        android:layout_width="48dp"
        android:padding="8dp"
        android:layout_height="48dp"
        android:scaleType="fitStart"
        android:rotation="90"
        android:tint="@color/colorAccent"
        android:src="@drawable/two_way"
        android:background="@drawable/roundedcorners"
        app:layout_constraintRight_toRightOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="@id/view_top"
        app:layout_constraintBottom_toBottomOf="@id/view_top"
        android:contentDescription="@string/exchange_button"
        />

    <TextView
        android:id="@+id/tv_label_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:textSize="48sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_buy_value"
        app:layout_constraintEnd_toEndOf="@id/guideline_labels_end"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/euro"
        android:textColor="@color/colorAccent"
        android:textSize="48sp"
        app:layout_constraintLeft_toLeftOf="@id/et_buy_value"
        app:layout_constraintBottom_toBottomOf="@id/et_buy_value"
        app:layout_constraintTop_toTopOf="@id/et_buy_value"
        />

    <EditText
        android:id="@+id/et_buy_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/EditTextCustom"
        android:layout_marginStart="64dp"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toLeftOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/tv_label_sell"
        app:layout_constraintBottom_toTopOf="@id/view_separator"
        android:layout_marginEnd="32dp"
        android:hint="@string/zero"
        android:paddingEnd="16dp"
        android:layout_marginBottom="32dp"
        android:maxLength="9"
        />

    <View
        android:id="@+id/view_separator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_buy_value"
        app:layout_constraintBottom_toTopOf="@id/tv_label_buy"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_label_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell"
        android:textSize="48sp"
        android:layout_marginTop="32dp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@id/et_sell_value"
        app:layout_constraintTop_toBottomOf="@id/view_separator"
        app:layout_constraintLeft_toLeftOf="@id/guideline_labels"
         />

    <Spinner
        android:id="@+id/sp_currency"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintLeft_toRightOf="@id/et_sell_value"
        app:layout_constraintBottom_toBottomOf="@id/et_sell_value"
        app:layout_constraintTop_toTopOf="@id/et_sell_value"
        android:spinnerMode="dialog"
        />

    <EditText
        android:id="@+id/et_sell_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        style="@style/EditTextCustom"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="88dp"
        android:gravity="start"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toLeftOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/tv_label_buy"
        app:layout_constraintBottom_toBottomOf="parent"
        android:maxLength="9"
        android:paddingStart="16dp"
        android:textColor="@color/colorText"
        app:backgroundTint="@color/colorText"
        />

    <TextView
        android:id="@+id/tv_sell_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:text="$"
        android:textColor="@color/colorText"
        android:textSize="48sp"
        app:layout_constraintLeft_toLeftOf="@id/et_sell_value"
        app:layout_constraintBottom_toBottomOf="@id/et_sell_value"
        app:layout_constraintTop_toTopOf="@id/et_sell_value"
        />


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="64dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_labels_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="64dp" />


</android.support.constraint.ConstraintLayout>
